--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
   flex-wrap: wrap;
 }
 .card {
+  max-width: 1000px;
   width: 300px;
   margin: 1rem;
   background-color: #1b1b1b;
@@ -41,7 +42,7 @@ body {
   height: auto;
   margin: 1rem;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-  position: relative;
+
   overflow: hidden;
   border-radius: 3px;
   transition: 0.5s ease-in-out;
